crates/fe/tests/fixtures/cli_output/ingots/everything_broken/everything_broken.snap
---
source: crates/fe/tests/cli_output.rs
expression: output
---
=== STDERR ===
❌ Invalid fe.toml file in ingot file://<project>/crates/fe/tests/fixtures/cli_output/ingots/everything_broken/: TOML parse error at line 1, column 7
  |
1 | [ingot
  |       ^
invalid table header
expected `.`, `]`


=== EXIT CODE: 1 ===
